--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,7 +12,7 @@
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
     "contentful": "^11.7.15",
-    "framer-motion": "^12.23.12",
+    "framer-motion": "^10.16.4",
     "next": "14.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
