City guides: ensure at least one outgoing internal link via /guide fallback; standardize 'More guides' section fallback in [slug]/page.tsx

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "linkinator": "^6.1.4",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
