chore(git): ignore crawl/crawl-output artifacts; untrack previously committed linkinator + temp files

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,12 @@ next-env.d.ts
 
 # OS
 Thumbs.db
+
+# Crawl/analysis artifacts
+linkinator*.json
+linkinator.log
+crawled.txt
+guide-urls.txt
+orphans.txt
+sitemap-urls.txt
+/sitemap.xml
