--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
     "contentful": "^11.7.15",
+    "dotenv": "^17.2.2",
     "framer-motion": "^10.16.4",
     "next": "14.2.5",
     "react": "^18.2.0",
