--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
+    "@supabase/supabase-js": "^2.76.1",
     "contentful": "^11.7.15",
     "dotenv": "^17.2.2",
     "framer-motion": "^10.16.4",
