--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
   "framework": "nextjs",
   "buildCommand": "npm run build",
-  "outputDirectory": ".next"
+  "outputDirectory": ".next",
+  "build": {
+    "env": {
+      "CACHE_BUST": "v2"
+    }
+  }
 }
