Fix: Optimize build to prevent OOM errors on Vercel
- Increased Node.js memory limit to 7GB
- Disabled worker threads to reduce memory usage
- Limited CPU usage to 1 core for sequential processing
- Added maxDuration for serverless functions

--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,13 @@
   "outputDirectory": ".next",
   "build": {
     "env": {
-      "CACHE_BUST": "v2"
+      "CACHE_BUST": "v3",
+      "NODE_OPTIONS": "--max-old-space-size=7168"
+    }
+  },
+  "functions": {
+    "app/**/*.tsx": {
+      "maxDuration": 60
     }
   }
 }
