Add cooler city pages to sitemap and increase build memory limit
- Added 1046 haha-coolers city pages to sitemap (generated from states.ts and filesystem)
- Increased Node.js heap size to 8GB for builds (package.json and vercel.json)
- Added cross-env for cross-platform environment variable support
- Updated sitemap to dynamically discover all cooler city pages

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "cross-env NODE_OPTIONS=--max-old-space-size=8192 next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -28,6 +28,7 @@
     "@types/react-dom": "^18",
     "@types/stripe": "^8.0.416",
     "autoprefixer": "^10.4.21",
+    "cross-env": "^7.0.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "linkinator": "^6.1.4",
