Increase build memory to 12GB and optimize Next.js config
- Increased Node.js heap size to 12GB (12,288 MB) for Vercel builds
- Updated buildCommand in vercel.json to explicitly set NODE_OPTIONS
- Added standalone output mode to reduce memory usage
- Optimized build ID generation

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 {
   "framework": "nextjs",
-  "buildCommand": "npm run build",
+  "buildCommand": "NODE_OPTIONS=--max-old-space-size=12288 npm run build",
   "outputDirectory": ".next",
   "build": {
     "env": {
       "CACHE_BUST": "v3",
-      "NODE_OPTIONS": "--max-old-space-size=8192"
+      "NODE_OPTIONS": "--max-old-space-size=12288"
     }
   },
   "functions": {
